# rl_controller

./: CMakeLists.txt  README.md  generate_joint_mapping.py
etc/: RLController.in.yaml
policy/: actor_6999.onnx.data  eval_policy_io.csv  go2.onnx  hrp5p.onnx  walking_better_h1.onnx  walking_lockstep_h1.onnx
src/: CMakeLists.txt  PolicySimulatorHandling.cpp  PolicySimulatorHandling.h  RLController.cpp  RLController.h  RLPolicyInterface.cpp  RLPolicyInterface.h  utils.cpp  utils.h
src/states/: CMakeLists.txt  Posture_TorqueTask_Pos_Compliance.cpp  Posture_TorqueTask_Pos_Compliance.h  RL_State.cpp  RL_State.h
